syntax = "proto3";


import "google/api/annotations.proto";

import "entities/yearbook-type.proto";

service YearbookTypeService {
  rpc CreateYearbookType (YearbookType) returns (YearbookType) {
    option (google.api.http).post = "/v1/yearbook-types";
  }

  rpc GetYearbookType (GetYearbookTypeRequest) returns (YearbookType) {
    option (google.api.http).get = "/v1/yearbook-types/{id}";
  }

  rpc QueryYearbookTypes (QueryYearbookTypesRequest) returns (QueryYearbookTypesResponse) {
    option (google.api.http).get = "/v1/yearbook-types/query";
  }

  rpc UpdateYearbookType (YearbookType) returns (YearbookType) {
    option (google.api.http).put = "/v1/yearbook-types/{id}";
  }

  rpc DeleteYearbookType (DeleteYearbookTypeRequest) returns (YearbookType) {
    option (google.api.http).delete = "/v1/yearbook-types/{id}";
  }
}
message GetYearbookTypeRequest {
  int64 id = 1;
}

message QueryYearbookTypesRequest {
  int64 photographer_id = 1;
}

message QueryYearbookTypesResponse {
  repeated YearbookType students = 1;
}

message DeleteYearbookTypeRequest {
  int64 id = 1;

  int32 version = 5;
}
