syntax = "proto3";

package yearbooks_production.api;

option java_multiple_files = true;

message YearbookType {
  int64 id = 1;

  string name = 5;

  int32 price = 9;

  int32 portrait_meetings_count = 13;

  int32 group_meetings_count = 17;

  int64 photographer_id = 21;
}
